refactor(tenant api): rename "id" to "tenantId"
